--- a/recipes/css/practice.css
+++ b/recipes/css/practice.css
@@ -1,3 +1,31 @@
+body {
+    background-image:url(../img/oceanfloor.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+
+   
+}
+
+
+
+h1 {
+    font-family: cursive;
+    font-size: 50px;
+    text-align: center;
+    margin-bottom: -25px;
+
+}
+
+.max {
+    font-family: cursive;
+    font-size: 75px;
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color: #C9002B;
+}
+
+
 section {
     float: left;
     width: 50%;
@@ -10,5 +38,11 @@ aside {
 
 
 .crab1 {
-    size: 5000px;
+    display: block;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 100px;
+   width: 50%;
+   box-shadow: 0px 0px 20px;
+
 }
