--- a/css/crab.css
+++ b/css/crab.css
@@ -13,6 +13,7 @@ h1 {
     font-size: 50px;
     text-align: center;
     margin-bottom: -25px;
+    padding-right: 750px;
 
 }
 
@@ -23,6 +24,7 @@ h1 {
     margin-top: 0px;
     margin-bottom: 0px;
     color: #C9002B;
+    padding-right: 730px;
 }
 
 
@@ -44,5 +46,7 @@ aside {
    border-radius: 100px;
    width: 50%;
    box-shadow: 0px 0px 20px;
+
+   
 
 }
