--- a/css/actuallasagna.css
+++ b/css/actuallasagna.css
@@ -13,11 +13,19 @@ body {
     border-radius: 100px;
 }
 
-header img {
+/*header img {
     height: 100px;
     width: 100px;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     padding-left: 850px;
+}*/
+
+img#logo.center {
+    height: 100px;
+    width: 100px;
+    text-align: center;
+    position:absolute;
+
 }
