--- a/css/crab.css
+++ b/css/crab.css
@@ -2,29 +2,41 @@ body {
     background-image:url(../img/oceanfloor.png);
     background-repeat: no-repeat;
     background-size: cover;
+  
 
    
+}
+
+img#logo.center {
+    height: 100px;
+    width: 100px;
+    text-align: center;
+    position:absolute;
+
 }
 
 
 
 h1 {
     font-family: cursive;
-    font-size: 50px;
+    font-size: 70px;
     text-align: center;
-    margin-bottom: -25px;
-    padding-right: 750px;
-
+    display: block;
+    margin-left: -5%;
+    margin-right: auto;
+    margin-bottom: 0px;
 }
 
 .max {
     font-family: cursive;
-    font-size: 75px;
+    font-size: 95px;
     text-align: center;
-    margin-top: 0px;
-    margin-bottom: 0px;
     color: #C9002B;
-    padding-right: 730px;
+    display: block;
+    margin-left: -2%;
+    margin-right: auto;
+    margin-top: -20px;
+    margin-bottom: 0px;
 }
 
 
